# claude-code-sdk

./: .gitignore  README.md  README.zh-CN.md  package.json  tsconfig.json
examples/: image-usage.ts  multimodal-usage.ts  with-anthropic-sdk.ts
python/: README.md  README.zh-CN.md  pyproject.toml
python/claude_code_sdk/: __init__.py  parser.py  types.py
python/claude_code_sdk/compat/: __init__.py  client.py  http_client.py  sessions.py  transform.py
python/examples/: basic_usage.py  image_usage.py  multimodal_usage.py
src/: index.ts  parser.ts  types.ts
src/compat/: client.ts  fetch.ts  http-client.ts  index.ts  sessions.ts  transform.ts
